--- a/Research Question 2/RQ2_rape_frequency_by_collection_1-15-21.ipynb
+++ b/Research Question 2/RQ2_rape_frequency_by_collection_1-15-21.ipynb
@@ -543,10 +543,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "#manual counts of number of interviews in each collection, followed by description of how count was arrived at\n",
     "#TODO: clean up organization of transcripts on google drive so we know how many\n",
     "#interviews are in each collection and can easily get .txt files for them\n",
@@ -565,61 +566,42 @@
     "             #'UNCGAS': 1,\n",
     "             #'UNCSW': 7,\n",
     "             #'UNCTWMS': 34}\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Proportion of HM interviews with rape event: 0.06**"
+    "}\n",
+    "'''\n",
+    "\n",
+    "dict(metadata['collection_id'].value_counts())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.05991812430219576"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BWOH: 0.250\n",
+      "BWSP: 0.012\n",
+      "HM: 0.060\n",
+      "ROHA: 0.062\n",
+      "SCAARJ: 0.286\n",
+      "SCAL: 0.400\n",
+      "SCAP: 0.040\n",
+      "SCVF: 0.686\n",
+      "SHSA: 0.067\n",
+      "SHSF: 0.043\n",
+      "UNCGAS: 0.033\n",
+      "UNCSW: 0.104\n",
+      "UNCTWMS: 0.204\n"
+     ]
     }
    ],
    "source": [
-    "counts_by_collection['HM'] / total_interviews_per_collection['HM']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Proportion of SCVF interviews with rape event: 0.14**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1417004048582996"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "counts_by_collection['SCVF'] / total_interviews_per_collection['SCVF']"
+    "for key, val in counts_by_collection.items():\n",
+    "    if key in total_interviews_per_collection:\n",
+    "        percentage = counts_by_collection[key]/total_interviews_per_collection[key]\n",
+    "        print(\"{}: {:.3f}\".format(key, percentage))"
    ]
   },
   {
