--- a/Research Question 2/RQ2_rape_frequency_by_collection_1-15-21.ipynb
+++ b/Research Question 2/RQ2_rape_frequency_by_collection_1-15-21.ipynb
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,12 +569,12 @@
     "}\n",
     "'''\n",
     "\n",
-    "dict(metadata['collection_id'].value_counts())\n"
+    "total_interviews_per_collection = dict(metadata['collection_id'].value_counts())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
